Fixed an issue with multiple latex formulas in the same '$$' block.

--- a/news/2 Fixes/9766.md
+++ b/news/2 Fixes/9766.md
@@ -1,1 +1,1 @@
-Changed the latex manipulation to only fix single formulas. Otherwise the user must input '$' or '$$' as intended.
+Fixed an issue with multiple latex formulas in the same '$$' block.
