--- a/news/1 Enhancements/9401.md
+++ b/news/1 Enhancements/9401.md
@@ -1,1 +1,1 @@
-When the output of a cell gets trimmed for the first time, a message will inform the user and also tell him which setting changes it.
+When the output of a cell gets trimmed for the first time, the user will be informed of it and which setting changes it.
