filter out magic commands instead of ignoring all the jupyter intellisense.

--- a/news/2 Fixes/10023.md
+++ b/news/2 Fixes/10023.md
@@ -1,1 +1,1 @@
-Jupyter autocompletion will only show up on empty lines, instead of appearing in functions.
+Jupyter autocompletion will only show magic commands on empty lines, preventing them of appearing in functions.
