--- a/news/1 Enhancements/10739.md
+++ b/news/1 Enhancements/10739.md
@@ -1,1 +1,1 @@
-Added command translations for Malayalam Language
+Added command translations for Malayalam Language and Added more transalations to Hindi .
