--- a/news/1 Enhancements/10879.md
+++ b/news/1 Enhancements/10879.md
@@ -1,1 +1,1 @@
-Prompt when an "unsafe" workspace python environment is to be autoselected.
+Prompt when an "untrusted" workspace Python environment is to be auto selected.
