Edit news entries appropriately

--- a/news/1 Enhancements/10374.md
+++ b/news/1 Enhancements/10374.md
@@ -1,1 +1,1 @@
-Added a command to reset value of Python interpreter.
+Added a command `Clear Workspace Interpreter Setting` to clear value of Python interpreter from workspace settings.
