--- a/news/1 Enhancements/10325.md
+++ b/news/1 Enhancements/10325.md
@@ -1,1 +1,1 @@
-Use new interpreter storage supporting multiroot workspaces when in PythonPath experiment.
+Use new interpreter storage supporting multiroot workspaces when in Deprecate PythonPath experiment.
