--- a/news/1 Enhancements/10912.md
+++ b/news/1 Enhancements/10912.md
@@ -1,1 +1,1 @@
-Added a command to reset "untrusted" interpreters storage.
+Added a command `Reset stored info for untrusted Interpreters` to reset "untrusted" interpreters storage when in Deprecate PythonPath experiment.
