--- a/news/1 Enhancements/11083.md
+++ b/news/1 Enhancements/11083.md
@@ -1,1 +1,1 @@
-Set python.pythonPath in workspace/configuration LSP call
+Ensure language server can query pythonPath when in Deprecate PythonPath experiment.
