--- a/news/1 Enhancements/11083.md
+++ b/news/1 Enhancements/11083.md
@@ -1,1 +1,1 @@
-Ensure language server can query pythonPath when in the Deprecate PythonPath experiment.
+Ensure the language server can query pythonPath when in the Deprecate PythonPath experiment.
