--- a/news/1 Enhancements/10818.md
+++ b/news/1 Enhancements/10818.md
@@ -1,1 +1,1 @@
-Support for the new intellisense engine inside of notebooks and the interactive window.
+Support for diffing language servers inside of notebooks and the interactive window.
