--- a/news/1 Enhancements/10818.md
+++ b/news/1 Enhancements/10818.md
@@ -1,1 +1,1 @@
-Support for diffing language servers inside of notebooks and the interactive window.
+Support for language servers that don't allow incremental document updates inside of notebooks and the interactive window.
